name:               thibaud
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable thibaud
  main-is:          thibaud.hs
  build-depends:    base == 4.*
                  , hakyll == 4.12.*
                  , filepath
                  , time
  ghc-options:      -threaded
  default-language: Haskell2010
